     changes in C, bringing the Python and C implementations back in
     sync.  See lib/python/AccessControl/ZopeSecurityPolicy.py.

   - Change acquisition wrappers to implement the descr get slot
     directly, thus speeding the use of the slot.

   - Collector #1233: port ZOPE_CONFIG patch from Zope 2.7 to Zope 2.8

  After Zope 2.8.3

    Bugs Fixed

      - Collector #1926: fixed a typo in _doAddUser when password
        encryption is enabled.

  Zope 2.8.3 (2005/10/18)

    Other

      - ZSQLMethod.manage_main: Moved the error message that warns of a 
        non-existing or closed database connection next to the Connection ID
        dropdown and present it using red to increase its visibility.

      - Update to Docutils 0.3.9 (forgotten in Zope 2.8.2)

  Zope 2.8.2 (2005/10/13)

    Features added

      - Collector #1118: Added syntax to dtml-sqlgroup to support flexible
        generation of 'UPDATE' statements (bounty sponsored by Logicalware).

      - The '@' character is now allowed in object ids (RFC 1738 allows it).

    Bugs Fixed

      - OFS.Image.manage_FTPget() would str() it's .data attribute,
        potentially loading the whole file in memory as a
        string. Changed to use RESPONSE.write() iterating through the
        Pdata chain, just like index_html().

      - When PageTemplates have a syntax error, show the traceback output
        in the rendered error message.

      - Collector #1914: Hardened 'call_with_ns' (in
        'Products.PageTemplates.ZRPythonExpr') against namespaces from other
        callers than page templates.

      - Collector #1490: Added a new zope.conf option to control the
        character set used to encode unicode data that reaches
        ZPublisher without any specified encoding.

      - Collector #1895: omit 'var' folder from recursive traversal causing
        trouble with DirectoryStorage.

      - disabled ".. include" directive for all the ZReST product and the
        reStructuredText package