@@ -1,0 +1,38 @@
+""" Unit tests for ZReST objects
+
+$Id$
+"""
+import unittest
+
+class TestZReST(unittest.TestCase):
+
+    def _getTargetClass(self):
+        from Products.ZReST.ZReST import ZReST
+        return ZReST
+
+    def _makeOne(self, id='test', *args, **kw):
+        return self._getTargetClass()(id=id, *args, **kw)
+
+    def test_empty(self):
+        empty = self._makeOne()
+
+        # New instances should not have non-volatile cache attributes
+        self.assertRaises(AttributeError, lambda: empty.formatted)
+        self.assertRaises(AttributeError, lambda: empty.warnings)
+
+        self.assertEqual(empty._v_formatted, None)
+        self.assertEqual(empty._v_formatted, None)
+
+    def test_formatted_ignored(self):
+        resty = self._makeOne()
+        resty.formatted = 'IGNORE ME'
+
+        self.failIf('IGNORE ME' in resty.index_html())
+
+def test_suite():
+    suite = unittest.TestSuite()
+    suite.addTest(unittest.makeSuite(TestZReST))
+    return suite
+
+if __name__ == '__main__':
+    unittest.main(defaultSuite='test_suite')
